; ModuleID = '/home/carl/AnghaBench/tmux/extr_tty-term.c_tty_term_ptr2.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_tty-term.c_tty_term_ptr2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_term = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @tty_term_ptr2(%struct.tty_term* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.tty_term*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store %struct.tty_term* %0, %struct.tty_term** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.tty_term*, %struct.tty_term** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i64 @tty_term_string(%struct.tty_term* %9, i32 %10)
  %12 = inttoptr i64 %11 to i8*
  %13 = load i8*, i8** %7, align 8
  %14 = ptrtoint i8* %13 to i64
  %15 = load i8*, i8** %8, align 8
  %16 = ptrtoint i8* %15 to i64
  %17 = call i8* @tparm(i8* %12, i64 %14, i64 %16, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0)
  ret i8* %17
}

declare dso_local i8* @tparm(i8*, i64, i64, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i64 @tty_term_string(%struct.tty_term*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
